2003-11-15  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_enums.c: disable range checks.

	* sample/type-register.rb: call GLib::Object#notify when a
	property is updated.

	* src/rbgobj_signal.c: remove GLib::MetaInterface#signal_override
	and GLib::Instantiatable#signal_chain_from_overridden.

2003-11-10  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.c: remove duplication of #include <locale.h>.

2003-11-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_enums.c, rbgobject.h: Add G_RENAME_NICK.

2003-11-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>	

	* sample/type-register.rb: remove Japanese comments.

	* src/rbglib.h: increment RBGLIB_MINOR_VERSION.

	* src/rbgobj_object.c: do not depend on C99, Thanks to Hiroshi
	IGARASHI.

	* src/rbgobj_object.c: remove unnecessary #endif, Thanks to Nobuyoshi
	Nakada.

2003-11-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* sample/type-register.rb: add new file.

	* rename test/test-glib2.rb to tests/test-glib2.rb.

	* src/rbgobj_object.c: rename GLib::Object.register_type to
	type_register and change its arguments.

	* src/rbgobj_object.c, src/rbgobj_signal.c, src/global.h: enable
	subtyping codes by default.

2003-10-29  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/global.h, src/rbgobj_object.c, src/rbgobj_signal.c: share a
	module which serves to hook 'super'.

	* src/rbgobj_signal.c: change prefix of default handler of signals
	from 'do_' to 'signal_do_'.

	* test/test-glib2.rb: new file.

2003-10-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c (get_prop_func, set_prop_func): replace '-' with
	'_' from method name.

	* src/rbgobj_object.c (get_prop_func, set_prop_func): do not call
	#do_get_property and #do_set_property, but #foo and #foo=.

	* src/rbgobj_signal.c (gobj_s_signal_new): change the arity of
	GLib::Instantiatable#signal_new.

2003-10-24  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c (emit_body, chain_from_overridden_body):